# PaddleOCR-Lite-Document

./: CMakeLists.txt  PaddleOCR-Lite-Doc.cbp  README.md
include/: db_post_process.h
models/: PP_OCRv5_server_det.param  PP_OCRv5_server_rec.param  PP_OCRv5_vocab.txt  ch_PP-OCRv3_det_slim_opt.nb  ch_PP-OCRv3_rec_slim_opt.nb  ch_ppocr_mobile_v2.0_cls_slim_opt.nb
src/: db_post_process.cc  main.cpp  ocr_db_crnn.cc
